# Federal_Ka_Manjan-Educational_AI_Agent

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  PRD&Technical Architecture.md  README.md  base-agent.py  main.py  package-lock.json  pyproject.toml  requirements.txt  test_connection.py
.claude/: settings.local.json
Editable Notes - Class 10/Chemistry/Premium Batch Notes - Editable Stuff/: Chapter 3 - Notes (Final 1).docx  Chapter 7 Class 10 Notes.draft  Chapter 7 Qna.draft  Chemical Kinetic Excercise.docx  Chemistry _ Grade 10 _ Federal Board.docx  Class 10 , Chemical Kinetics qna.docx
Editable Notes - Class 10/English/Premium Batch Notes/: English Class 10 (1).docx
Editable Notes - Class 9/English Version/Computer Science/: CHAPTER 5.draft
api/: index.py
docs/: style-guide.md
scripts/: __init__.py  create_chat_logs_table.sql  extract_math_zips.py  ingest_all_subjects.py  ingest_math_notes.py  ingest_physics_notes.py  migrate_to_768_dims.sql  seed_admin.py  setup_supabase.sql  test_rag_pipeline.py
src/: __init__.py  config.py
src/agents/: __init__.py  chapter_router.py  math_formula_agent.py  math_orchestrator.py  math_solving_agent.py  qa_agent.py  rag_retriever.py
src/api/: __init__.py  auth.py  main.py  models.py
src/ingestion/: __init__.py  docx_extractor.py  embedding_generator.py  latex_extractor.py  math_chunker.py  math_pipeline.py  pipeline.py  subject_metadata.py  supabase_loader.py  text_chunker.py
src/services/: __init__.py  chat_logger.py  groq_client.py  key_rotator.py  opik_setup.py  supabase_client.py
(+165 files in other folders)
