[project]
name = "federal-ka-manjan-educational-ai-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "google-genai==1.60.0",
    "groq>=0.11.0",
    "httpx>=0.27.2",
    "numpy>=1.24.0",
    "pydantic-settings>=2.0.0,<3.0.0,!=2.9.0",
    "python-docx==1.1.0",
    "python-dotenv==1.0.0",
    "supabase>=2.27.3",
    "uvicorn[standard]>=0.27.0",
    "PyJWT>=2.8.0",
]
